--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ license = "MIT/Apache-2.0/BSD-3-Clause"
 edition = "2021"
 exclude = ["index.node"]
 
+[profile.release]
+lto = true
+
 [lib]
 crate-type = ["cdylib"]
 
@@ -17,7 +20,7 @@ io-uring = ["cozo/io-uring"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cozo = { version = "0.1.1", path = ".." }
+cozo = { version = "0.1.2" }
 miette = { version = "=5.3.0", features = ["fancy"] }
 serde_json = "1.0.81"
 lazy_static = "1.4.0"
