--- a/package.json
+++ b/package.json
@@ -2,9 +2,24 @@
   "name": "cozo-nodejs",
   "version": "0.1.1",
   "description": "Cozo database for NodeJS",
-  "main": "index.node",
+  "main": "native/index.node",
+  "files": [
+    "native",
+    "lib"
+  ],
+  "binary": {
+    "module_name": "index",
+    "host": "https://github.com/cozodb/cozo-lib-nodejs/releases/download/",
+    "remote_path": "{version}",
+    "package_name": "{napi_build_version}-{platform}-{arch}.tar.gz",
+    "module_path": "./native/{napi_build_version}",
+    "pkg_path": ".",
+    "napi_versions": [
+      6
+    ]
+  },
   "scripts": {
-    "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
+    "build": "cargo-cp-artifact -nc native/index.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
     "build-release": "npm run build -- --release",
     "install": "npm run build-release",
@@ -17,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cozodb/cozo.git"
+    "url": "git+https://github.com/cozodb/cozo-lib-nodejs.git"
   },
   "keywords": [
     "database",
@@ -27,5 +42,8 @@
   "bugs": {
     "url": "https://github.com/cozodb/cozo/issues"
   },
-  "homepage": "https://github.com/cozodb/cozo#readme"
+  "homepage": "https://github.com/cozodb/cozo#readme",
+  "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.10"
+  }
 }
