--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cozo-nodejs",
-  "version": "0.1.3",
+  "name": "cozo-node",
+  "version": "0.1.4",
   "description": "Cozo database for NodeJS",
   "main": "index",
   "files": [
